# configkit

./: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  PLAN.md  PRD.md  QA_MATRIX.md  SECURITY.md  SPEC.md  TEST_COVERAGE_MATRIX.md  VERIFICATION_POLICY.md  clippy.toml  codecov.yml  gitleaks.toml  nextest.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  benchmarks.yml  ci.yml  pre-commit.yml  release-drafter.yml  security-guard.yml
docs/journeys/: index.md  quick-start.md
docs/research/: SOTA.md
docs/stories/: hello-world.md  index.md
docs/traceability/: index.md
