[package]
[package]
name = "settly"
version = "0.1.0"
edition = "2021"
authors = ["Phenotype Team"]
description = "Settings management with validation, versioning, and migration support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phenotype-dev/settly"
documentation = "https://docs.rs/settly"
keywords = ["settings", "config", "validation", "migration"]
categories = ["config", "validation"]
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
