[package]
name = "settly"
version = "0.1.0"
edition = "2021"
authors = ["Phenotype Team"]
description = "Settings management with validation, versioning, and migration support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phenotype-dev/settly"
documentation = "https://docs.rs/settly"
keywords = ["settings", "config", "validation", "migration"]
categories = ["config", "validation"]
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }

# Database
tokio-postgres = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Cache
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Logging
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true

[[bench]]
name = "perf"
harness = false
